syntax = "proto3";

package viru_tech.clickhouse_sinker.parser.testdata.v1;

import "google/protobuf/timestamp.proto";

option go_package = "viru-tech/clickhouse_sinker/parser/testdata";

message Test {
  NestedTest null = 1;

  bool bool_true = 2;

  bool bool_false = 3;

  int32 num_int32 = 4;

  int64 num_int64 = 5;

  float num_float = 6;

  double num_double = 7;

  uint32 num_uint32 = 8;

  uint64 num_uint64 = 9;

  string str = 10;

  string str_date = 11;

  google.protobuf.Timestamp timestamp = 12;

  NestedTest obj = 13;

  repeated int32 array_empty = 14;

  repeated bool array_bool = 15;

  repeated int32 array_num_int32 = 16;

  repeated int64 array_num_int64 = 17;

  repeated float array_num_float = 18;

  repeated double array_num_double = 19;

  repeated uint32 array_num_uint32 = 20;

  repeated uint64 array_num_uint64 = 21;

  repeated string array_str = 22;

  repeated google.protobuf.Timestamp array_timestamp = 23;

  string uuid = 24;

  repeated string array_uuid = 25;

  string ipv4 = 26;

  repeated string array_ipv4 = 27;

  string ipv6 = 28;

  repeated string array_ipv6 = 29;

  string str_time = 30;

  map<string, string> map_str_str = 31;

  map<string, uint32> map_str_uint32 = 32;

  map<string, uint64> map_str_uint64 = 33;

  map<string, int32> map_str_int32 = 34;

  map<string, int64> map_str_int64 = 35;

  map<string, float> map_str_float = 36;

  map<string, double> map_str_double = 37;

  map<int64, string> map_int64_str = 38;

  map<string, bool> map_str_bool = 39;

  map<string, google.protobuf.Timestamp> map_str_date = 40;

  map<string, NestedTest> map_str_obj = 41;
}

message NestedTest {
  string str = 1;
}
